Custom driver with GFX

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,8 @@ platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
 board_build.core = earlephilhower
+lib_deps = 
+    Wire
+    SPI
+	adafruit/Adafruit GFX Library@^1.11.5
+	adafruit/Adafruit BusIO@^1.14.1
