--- a/platformio.ini
+++ b/platformio.ini
@@ -16,5 +16,6 @@ board_build.core = earlephilhower
 lib_deps = 
     Wire
     SPI
+    Time
 	adafruit/Adafruit GFX Library@^1.11.5
 	adafruit/Adafruit BusIO@^1.14.1
