--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,10 @@ board = pico
 framework = arduino
 board_build.core = earlephilhower
 lib_deps = 
-    Wire
-    SPI
-    Time
+	Wire
+	SPI
+	Time
 	adafruit/Adafruit GFX Library@^1.11.5
 	adafruit/Adafruit BusIO@^1.14.1
+	adafruit/Adafruit Unified Sensor@^1.1.8
+	adafruit/DHT sensor library@^1.4.4
